--- a/org.radioflex.ide/plugin.xml
+++ b/org.radioflex.ide/plugin.xml
@@ -19,5 +19,131 @@
             id="org.radioflex.ide.perspective">
       </perspective>
    </extension>
+   <extension
+         point="org.eclipse.ui.views">
+      <view
+            class="org.eclipse.ui.navigator.CommonNavigator"
+            icon="icons/asm.gif"
+            id="org.radioflex.ide.projectview"
+            name="ASM Project Explorer">
+      </view>
+   </extension>
+   <extension
+         point="org.eclipse.ui.navigator.viewer">
+       <viewerContentBinding 
+            viewerId="org.radioflex.ide.projectview">
+          <includes>
+       	     <contentExtension pattern="org.eclipse.ui.navigator.resourceContent" />		       	      
+	         <contentExtension pattern="org.eclipse.ui.navigator.resources.filters.*"/>
+	         <contentExtension pattern="org.eclipse.ui.navigator.resources.linkHelper"/>
+             <contentExtension pattern="org.eclipse.ui.navigator.resources.workingSets"/>
+          </includes>
+       </viewerContentBinding>
+        <viewerActionBinding
+            viewerId="org.radioflex.ide.projectview">
+         <includes>
+            <actionExtension
+                  pattern="org.eclipse.ui.navigator.resources.*">
+            </actionExtension>
+         </includes>
+      </viewerActionBinding>
+   </extension>
+   <extension
+         point="org.eclipse.ui.newWizards">
+      <wizard
+            category="org.radioflex.ide.new.category"
+            class="org.radioflex.ide.ui.NewASMfile"
+            icon="icons/asm.gif"
+            id="org.radioflex.ide.newfile.wizard"
+            name="Assembler File">
+      </wizard>
+      <wizard
+            category="org.radioflex.ide.new.category"
+            class="org.radioflex.ide.ui.NewASMproject"
+            icon="icons/16/new_asm_project.gif"
+            id="org.radioflex.ide.newproject.wizard"
+            name="Assembler Project"
+            project="true">
+      </wizard>
+      <category
+            id="org.radioflex.ide.new.category"
+            name="Assembler">
+      </category>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="toolbar:org.eclipse.ui.main.toolbar">
+         <toolbar
+               id="org.radioflex.ide.toolbar">
+            <command
+                  commandId="org.radioflex.ide.command.new"
+                  icon="icons/asm.gif"
+                  style="push">
+            </command>
+            <command
+                  commandId="org.radioflex.ide.command.save"
+                  icon="icons/alt_about.gif"
+                  style="push">
+            </command>
+         </toolbar>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            defaultHandler="org.eclipse.ui.internal.handlers.WizardHandler$New"
+            id="org.radioflex.ide.command.new"
+            name="New">
+      </command>
+      <command
+            defaultHandler="org.eclipse.ui.internal.handlers.SaveHandler"
+            id="org.radioflex.ide.command.save"
+            name="Save">
+      </command>
+   </extension>
+   <extension
+         id="org.radioflex.ide.nature"
+         name="ASMNature"
+         point="org.eclipse.core.resources.natures">
+      <runtime>
+         <run
+               class="org.radioflex.ide.project.ASMNature">
+         </run>
+      </runtime>
+   </extension>
+   <extension
+         point="org.eclipse.ui.ide.projectNatureImages">
+      <image
+            icon="icons/8/asm.gif"
+            id="org.radioflex.ide.nature.image"
+            natureId="org.radioflex.ide.nature">
+      </image>
+   </extension>
+   <extension
+         id="org.radioflex.ide.builder"
+         name="ASMBuild"
+         point="org.eclipse.core.resources.builders">
+      <builder>
+         <run
+               class="org.radioflex.ide.project.ASMBuilder">
+         </run>
+      </builder>
+   </extension>
+   <extension
+         id="org.radioflex.ide.page.asm"
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="org.radioflex.ide.ui.PreferencesGeneral"
+            id="org.radioflex.ide.page.asm"
+            name="ASM">
+      </page>
+   </extension>
+    <extension
+          point="org.eclipse.core.runtime.preferences">
+       <initializer
+             class="org.radioflex.ide.ui.PreferencesInitializer">
+       </initializer>
+    </extension>
 
 </plugin>
