--- a/com.radioflex.ide/plugin.xml
+++ b/com.radioflex.ide/plugin.xml
@@ -7,7 +7,7 @@
          point="org.eclipse.core.runtime.applications">
       <application>
          <run
-               class="com.radioflex.ide.Application">
+               class="com.radioflex.ide.ui.Application">
          </run>
       </application>
    </extension>
@@ -15,7 +15,7 @@
          point="org.eclipse.ui.perspectives">
       <perspective
             name="RCP Perspective"
-            class="com.radioflex.ide.Perspective"
+            class="com.radioflex.ide.ui.Perspective"
             id="com.red.perspective">
       </perspective>
    </extension>
